syntax = "proto3";

package inventory;

service InventoryService {
  // Check if products are in stock and reserve them
  rpc CheckAndReserveStock(StockReservationRequest) returns (StockReservationResponse);
  
  // Release reserved stock (for failed orders)
  rpc ReleaseReservedStock(ReleaseStockRequest) returns (ReleaseStockResponse);
  
  // Commit the reservation (for successful orders)
  rpc CommitReservation(CommitReservationRequest) returns (CommitReservationResponse);
  
  // Get inventory level for products
  rpc GetInventoryLevels(InventoryLevelsRequest) returns (InventoryLevelsResponse);
}

// Product item for stock checks
message ProductItem {
  string product_id = 1;
  string sku = 2;
  int32 quantity = 3;
}

// Request to check and reserve stock
message StockReservationRequest {
  string order_id = 1;
  repeated ProductItem items = 2;
  string warehouse_id = 3;
}

// Response for stock reservation
message StockReservationResponse {
  bool success = 1;
  string reservation_id = 2;
  repeated ProductAvailability items = 3;
  string message = 4;
}

// Product availability details
message ProductAvailability {
  string product_id = 1;
  string sku = 2;
  bool in_stock = 3;
  int32 available_quantity = 4;
  string error_message = 5;
}

// Request to release stock reservation
message ReleaseStockRequest {
  string reservation_id = 1;
  string order_id = 2;
  string reason = 3;
}

// Response for releasing stock
message ReleaseStockResponse {
  bool success = 1;
  string message = 2;
}

// Request to commit reservation
message CommitReservationRequest {
  string reservation_id = 1;
  string order_id = 2;
}

// Response for committing reservation
message CommitReservationResponse {
  bool success = 1;
  string message = 2;
}

// Request to get inventory levels
message InventoryLevelsRequest {
  repeated string product_ids = 1;
  repeated string skus = 2;
  string warehouse_id = 3;
}

// Response with inventory levels
message InventoryLevelsResponse {
  repeated InventoryItem items = 1;
}

// Inventory item detail
message InventoryItem {
  string product_id = 1;
  string sku = 2;
  int32 quantity = 3;
  int32 reserved_quantity = 4;
  int32 available_quantity = 5;
  string warehouse_id = 6;
  string location = 7;
} 