syntax = "proto3";

package order;

// Import timestamp for dates
import "google/protobuf/timestamp.proto";

service OrderService {
  // Create a new order
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  
  // Get an order by its ID
  rpc GetOrder(GetOrderRequest) returns (OrderResponse);
  
  // Update an order's status
  rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
  
  // List orders with pagination
  rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponse);
  
  // Stream order status updates
  rpc StreamOrderUpdates(StreamOrderUpdatesRequest) returns (stream OrderStatusEvent);
}

// Order status enum
enum OrderStatus {
  ORDER_STATUS_UNKNOWN = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_PROCESSING = 2;
  ORDER_STATUS_SHIPPED = 3;
  ORDER_STATUS_DELIVERED = 4;
  ORDER_STATUS_CANCELLED = 5;
  ORDER_STATUS_RETURNED = 6;
}

// Request message for creating an order
message CreateOrderRequest {
  string customer_id = 1;
  repeated OrderItem items = 2;
  ShippingInfo shipping_info = 3;
  PaymentInfo payment_info = 4;
  string notes = 5;
}

// Order item details
message OrderItem {
  string product_id = 1;
  string name = 2;
  int32 quantity = 3;
  double unit_price = 4;
  double total_price = 5;
  string sku = 6;
}

// Shipping information
message ShippingInfo {
  string address_line1 = 1;
  string address_line2 = 2;
  string city = 3;
  string state = 4;
  string postal_code = 5;
  string country = 6;
  string recipient_name = 7;
  string recipient_phone = 8;
  string shipping_method = 9;
  double shipping_cost = 10;
}

// Payment information
message PaymentInfo {
  string payment_method = 1;
  string transaction_id = 2;
  double amount = 3;
  string currency = 4;
  bool is_paid = 5;
  google.protobuf.Timestamp payment_date = 6;
}

// Response message for order operations
message OrderResponse {
  string id = 1;
  string customer_id = 2;
  repeated OrderItem items = 3;
  ShippingInfo shipping_info = 4;
  PaymentInfo payment_info = 5;
  OrderStatus status = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  string tracking_number = 9;
  double total_amount = 10;
  string notes = 11;
}

// Request message for getting an order by ID
message GetOrderRequest {
  string order_id = 1;
}

// Request message for updating an order's status
message UpdateOrderStatusRequest {
  string order_id = 1;
  OrderStatus new_status = 2;
  string status_notes = 3;
}

// Request message for listing orders with pagination
message ListOrdersRequest {
  int32 page = 1;
  int32 page_size = 2;
  OrderStatus status_filter = 3;
  string customer_id = 4;
  google.protobuf.Timestamp start_date = 5;
  google.protobuf.Timestamp end_date = 6;
  string sort_by = 7;
  bool sort_desc = 8;
}

// Response message for listing orders
message ListOrdersResponse {
  repeated OrderResponse orders = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
  int32 total_pages = 5;
}

// Request message for streaming order updates
message StreamOrderUpdatesRequest {
  string customer_id = 1;
}

// Event message for order status updates
message OrderStatusEvent {
  string order_id = 1;
  OrderStatus previous_status = 2;
  OrderStatus new_status = 3;
  google.protobuf.Timestamp timestamp = 4;
} 